# kiro-amplify-template-v2

./: .env.example  .gitignore  AGENTS.md  README.md  amplify.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-agents.yml  ci.yml
.kiro/settings/: mcp.json
.kiro/skills/amplify-feature/: SKILL.md
.kiro/skills/mcp-tool-onboarding/: SKILL.md
.kiro/skills/pr-deploy-readiness/: SKILL.md
.kiro/skills/strands-agent-implementation/: SKILL.md
.kiro/steering/: amplify-backend.md  amplify-frontend.md  github-actions.md  product.md  repo-workflow.md  security.md  strands-agent.md  structure.md  tech.md  testing.md
agents/: .env.example  README.md  pyproject.toml  requirements.txt
agents/common/: config.py  logging.py
agents/sample_agent/: agent.py  app.py  tools.py
agents/scripts/: run_local.py
amplify/auth/: resource.ts
amplify/data/: resource.ts
docs/: deployment.md  kiro-usage.md  setup.md
docs/sample/: README.md  agent-chat.md  todo.md
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/app/api/copilotkit/: route.ts
src/app/sample/: page.tsx  sample.module.css
src/components/agent/: AgentChatSection.tsx  MessageInput.tsx  MessageList.tsx
src/hooks/: useAgentChat.ts
src/lib/: utils.ts
src/lib/agent/: CopilotProvider.tsx  agentRuntime.ts
src/lib/amplify/: AmplifyProvider.tsx
src/types/: amplify.d.ts  index.ts
